@@ -1,1 +1,1 @@
-rvm 1.26.11
+rvm 2.0.0
