@@ -161,5 +161,6 @@ class Page
   unordered_list(:ul_class_name, :class => "ul_class", :name => "ul_name")
 
   button(:alert_button, :id => "alert_button")
+  button(:confirm_button, :id => "confirm_button")
 
 end
